--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,5 @@ updates:
     directory: "/"
     schedule:
       interval: "monthly"
+  - name: Upload a Build Artifact
+  uses: actions/upload-artifact@v4.6.2
